# Pointnet2_PyTorch

./: pyproject.toml  requirements.txt  setup.py
pointnet2/models/: pointnet2_msg_cls.py  pointnet2_msg_sem.py  pointnet2_ssg_cls.py  pointnet2_ssg_sem.py
pointnet2_ops/: MANIFEST.in  setup.py
pointnet2_ops/ops/: __init__.py  pointnet2_modules.py  pointnet2_utils.py
pointnet2_ops_lib/: setup.py
