[tool.isort]
skip_glob = ["*/deps/*", "*/build/*", "*/obselete/*"]
known_third_party = ["h5py", "hydra", "lmdb", "msgpack_numpy", "numpy", "omegaconf", "pointnet2_ops", "pytest", "pytorch_lightning", "setuptools", "torch", "torchvision", "tqdm"]
multi_line_output = 3
force_grid_wrap = false
line_length = 88
include_trailing_comma = true
use_parentheses = true

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | obselete
    | deps
  )/
)
'''

[tool.poetry]
name = "pointnet2"
version = "0.1.0"
description = "A fork of Erik Wijman's implementation of Pointnet++"
authors = ["Adam Fishman <afishman@cs.washington.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pytorch-lightning = "^1.2.3"
numpy = "^1.20.1"
msgpack-numpy = "^0.4.7"
h5py = "^3.2.1"
torch = "^1.8.0"
hydra-core = "^1.0.6"
pointnet-ops = {git = "https://github.com/fishbotics/pointnet2_ops.git", rev = "main"}
lmdb = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
